--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <script src="main.js" defer></script>
   <title>Music Search</title>
 </head>
 <body>
   <h1>MyTunes</h1>
   <div id="results">
-
   </div>
 </body>
 </html>
