--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 </head>
 <body>
   <h1>MyTunes</h1>
+    <div id="search">
+      <form id="search-form" action="">
+        <label for="term">Search Term</label>
+        <input id="search-box" type="text" name="term">
+        <button>Search</button>
+      </form>
+    </div>
   <div id="results">
   </div>
 </body>
