Added functionality to run additional searches without refreshing

--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
   <title>Music Search</title>
 </head>
 <body>
-  <h1>MyTunes</h1>
-    <div id="search">
-      <form id="search-form" action="">
-        <label for="term">Search Term</label>
-        <input id="search-box" type="text" name="term">
-        <button>Search</button>
-      </form>
-    </div>
+  <h1>myTunes</h1>
+  <div class="content">
+  <p>Enter a musician or band name to find their music on myTunes.</p>
+  <div id="search">
+    <form id="search-form" action="">
+      <label for="term">Search Term</label>
+      <input id="search-box" type="text" name="term">
+      <button>Search</button>
+    </form>
+  </div>
   <div id="results">
+  </div>
   </div>
 </body>
 </html>
