--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div id="search">
     <form id="search-form" action="">
       <label for="term">Search Term</label>
-      <input id="search-box" type="text" name="term">
+      <input id="search-box" type="text" name="term" required>
       <button>Search</button>
     </form>
   </div>
