--- a/index.html
+++ b/index.html
@@ -13,12 +13,19 @@
   <p>Enter a musician or band name to find their music on myTunes.</p>
   <div id="search">
     <form id="search-form" action="">
-      <label for="term">Search Term</label>
+      <label for="term">Search Term: </label>
       <input id="search-box" type="text" name="term" required>
       <button>Search</button>
     </form>
   </div>
   <div id="results">
+      <!-- Structure -->
+      <!-- <div class="song">
+        <img class="songImg" src="">
+        <div class="trackName"></div>
+        <div class="artist"></div>
+        <audio class="audio" controls></audio>
+      </div> -->
   </div>
   </div>
 </body>
